# hyppprctl

./: Cargo.toml  README.md
audioctl/: Cargo.toml
audioctl/src/: main.rs
ewwctl/: Cargo.toml  update
ewwctl/src/: cli.rs  debounce.rs  events.rs  main.rs  server.rs
ewwctl/src/debouncer/: model.rs  server.rs
hyppprctl/: Cargo.toml
hyppprctl/src/: main.rs
src/: hypr.rs  main.rs  workspaces.rs
src/hypr/: workspaces.rs
